--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <p>© 2025 BarrosoBLOG - Sigue mi camino en @Barroso</p>
   </footer>
   <div id="anuncio" class="anuncio">
-  <img src="hombres.jpg" alt="Publicidad de Barroso" />
+  <img src="HOMBRES.jpg" alt="Publicidad de Barroso" />
   <button id="cerrarAnuncio">✖</button>
 </div>
 <script>
