--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BarrosoBLOG - Crónicas de un crack</title>
+  <title>Cronicas de Barroso</title>
   <link rel="stylesheet" href="barroso.css" />
   <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -55,7 +55,8 @@
     <section class="historia">
       <p>
         Aprendí la lección y decidí dejar el alcohol. Le dije al camarero:<br>
-        <em>“Hoy solo quiero 2 cafés. Uno pa mí y otro pa tu puta madre.”</em><br>
+        <em>“Hoy solo quiero 2 cafés. Uno pa mí y otro pa tu puta madre.<br>
+          Pa ti no que te pones mu nervioso”</em><br>
         Vida sana sanita.
       </p>
       <img src="sano.jpg" alt="Barroso con café" />
